--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@emotion/styled": "^11",
     "framer-motion": "^4",
     "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^8.32.0"
   },
   "devDependencies": {
