--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@next/eslint-plugin-next": "^15.0.1",
     "@types/node": "^17.0.21",
     "@types/react": "17.0.15",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
-    "eslint": "^7.32.0",
+    "eslint": "^9.13.0",
     "eslint-config-next": "^15.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
