--- a/package.json
+++ b/package.json
@@ -1,38 +1,322 @@
 {
-  "name": "kl-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "name": "kl_portfolio",
+  "version": "1.0.0",
+  "description": "LEEK",
+  "main": "next.config.js",
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.14",
-    "@chakra-ui/react": "^1.6.5",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "framer-motion": "^4",
+    "acorn": "^8.13.0",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^3.2.1",
+    "argparse": "^2.0.1",
+    "aria-hidden": "^1.1.3",
+    "aria-query": "^5.3.2",
+    "array-buffer-byte-length": "^1.0.1",
+    "array-includes": "^3.1.8",
+    "array-union": "^2.1.0",
+    "array.prototype.findlast": "^1.2.5",
+    "array.prototype.findlastindex": "^1.2.5",
+    "array.prototype.flat": "^1.3.2",
+    "array.prototype.flatmap": "^1.3.2",
+    "array.prototype.tosorted": "^1.1.4",
+    "arraybuffer.prototype.slice": "^1.0.3",
+    "ast-types-flow": "^0.0.8",
+    "available-typed-arrays": "^1.0.7",
+    "axe-core": "^4.10.2",
+    "axobject-query": "^4.1.0",
+    "babel-plugin-macros": "^2.8.0",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.3",
+    "browserslist": "^4.16.8",
+    "busboy": "^1.6.0",
+    "call-bind": "^1.0.7",
+    "callsites": "^3.1.0",
+    "caniuse-lite": "^1.0.30001669",
+    "chalk": "^2.4.2",
+    "client-only": "^0.0.1",
+    "color": "^4.2.3",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "color-string": "^1.9.1",
+    "colorette": "^1.3.0",
+    "common-tags": "^1.8.2",
+    "compute-scroll-into-view": "^1.0.14",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^1.8.0",
+    "copy-to-clipboard": "^3.3.1",
+    "cosmiconfig": "^6.0.0",
+    "cross-spawn": "^7.0.3",
+    "css-box-model": "^1.2.1",
+    "csstype": "^3.1.3",
+    "damerau-levenshtein": "^1.0.8",
+    "data-view-buffer": "^1.0.1",
+    "data-view-byte-length": "^1.0.1",
+    "data-view-byte-offset": "^1.0.0",
+    "debug": "^4.3.7",
+    "deep-is": "^0.1.3",
+    "define-data-property": "^1.1.4",
+    "define-properties": "^1.2.1",
+    "detect-libc": "^2.0.3",
+    "detect-node-es": "^1.1.0",
+    "dir-glob": "^3.0.1",
+    "dlv": "^1.1.3",
+    "doctrine": "^3.0.0",
+    "electron-to-chromium": "^1.3.812",
+    "emoji-regex": "^9.2.2",
+    "enhanced-resolve": "^5.17.1",
+    "error-ex": "^1.3.2",
+    "es-abstract": "^1.23.3",
+    "es-define-property": "^1.0.0",
+    "es-errors": "^1.3.0",
+    "es-iterator-helpers": "^1.1.0",
+    "es-object-atoms": "^1.0.0",
+    "es-set-tostringtag": "^2.0.3",
+    "es-shim-unscopables": "^1.0.2",
+    "es-to-primitive": "^1.2.1",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^15.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-module-utils": "^2.12.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-scope": "^7.2.2",
+    "eslint-visitor-keys": "^3.4.3",
+    "espree": "^9.6.1",
+    "esquery": "^1.6.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "fast-diff": "^1.2.0",
+    "fast-glob": "^3.3.2",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.11.1",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.1.1",
+    "find-root": "^1.1.0",
+    "find-up": "^5.0.0",
+    "flat-cache": "^3.2.0",
+    "flatted": "^3.3.1",
+    "focus-lock": "^0.8.1",
+    "for-each": "^0.3.3",
+    "framer-motion": "^4.1.17",
+    "framesync": "^5.3.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "function.prototype.name": "^1.1.6",
+    "functions-have-names": "^1.2.3",
+    "gensync": "^1.0.0-beta.2",
+    "get-intrinsic": "^1.2.4",
+    "get-nonce": "^1.0.1",
+    "get-symbol-description": "^1.0.2",
+    "get-tsconfig": "^4.8.1",
+    "glob": "^7.2.3",
+    "glob-parent": "^5.1.2",
+    "globals": "^11.12.0",
+    "globalthis": "^1.0.4",
+    "globby": "^11.1.0",
+    "gopd": "^1.0.1",
+    "graceful-fs": "^4.2.11",
+    "graphemer": "^1.4.0",
+    "has-ansi": "^2.0.0",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^3.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "hey-listen": "^1.0.8",
+    "hoist-non-react-statics": "^3.3.2",
+    "ignore": "^5.3.2",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^4.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.0.7",
+    "invariant": "^2.2.4",
+    "is-array-buffer": "^3.0.4",
+    "is-arrayish": "^0.2.1",
+    "is-async-function": "^2.0.0",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-bun-module": "^1.2.1",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.15.1",
+    "is-data-view": "^1.0.1",
+    "is-date-object": "^1.0.5",
+    "is-extglob": "^2.1.1",
+    "is-finalizationregistry": "^1.0.2",
+    "is-generator-function": "^1.0.10",
+    "is-glob": "^4.0.3",
+    "is-map": "^2.0.3",
+    "is-negative-zero": "^2.0.3",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.0.7",
+    "is-path-inside": "^3.0.3",
+    "is-regex": "^1.1.4",
+    "is-set": "^2.0.3",
+    "is-shared-array-buffer": "^1.0.3",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.13",
+    "is-weakmap": "^2.0.2",
+    "is-weakref": "^1.0.2",
+    "is-weakset": "^2.0.3",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "iterator.prototype": "^1.1.3",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "jsesc": "^3.0.2",
+    "json-buffer": "^3.0.1",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^2.2.3",
+    "jsx-ast-utils": "^3.3.5",
+    "keyv": "^4.5.4",
+    "language-subtag-registry": "^0.3.23",
+    "language-tags": "^1.0.9",
+    "levn": "^0.4.1",
+    "lines-and-columns": "^1.1.6",
+    "locate-path": "^6.0.0",
+    "lodash": "^4.17.21",
+    "lodash.merge": "^4.6.2",
+    "lodash.mergewith": "^4.6.2",
+    "loglevel": "^1.9.2",
+    "loglevel-colored-level-prefix": "^1.0.0",
+    "loose-envify": "^1.4.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.8",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.7",
+    "natural-compare": "^1.4.0",
     "next": "^15.0.1",
+    "node-releases": "^1.1.75",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.13.2",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.5",
+    "object.entries": "^1.1.8",
+    "object.fromentries": "^2.0.8",
+    "object.groupby": "^1.0.3",
+    "object.values": "^1.2.0",
+    "once": "^1.4.0",
+    "optionator": "^0.9.4",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "popmotion": "^9.3.6",
+    "possible-typed-array-names": "^1.0.0",
+    "postcss": "^8.4.31",
+    "prelude-ls": "^1.2.1",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
+    "prettier-linter-helpers": "^1.0.0",
+    "pretty-format": "^29.7.0",
+    "prop-types": "^15.8.1",
+    "punycode": "^2.3.1",
+    "queue-microtask": "^1.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-intersection-observer": "^8.32.0"
+    "react-intersection-observer": "^8.32.0",
+    "react-is": "^16.13.1",
+    "reflect.getprototypeof": "^1.0.6",
+    "regenerator-runtime": "^0.13.9",
+    "regexp.prototype.flags": "^1.5.3",
+    "require-relative": "^0.8.7",
+    "resolve": "^1.20.0",
+    "resolve-from": "^4.0.0",
+    "resolve-pkg-maps": "^1.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "safe-array-concat": "^1.1.2",
+    "safe-buffer": "^5.1.2",
+    "safe-regex-test": "^1.0.3",
+    "scheduler": "^0.23.2",
+    "semver": "^6.3.1",
+    "set-function-length": "^1.2.2",
+    "set-function-name": "^2.0.2",
+    "sharp": "^0.33.5",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.6",
+    "simple-swizzle": "^0.2.2",
+    "slash": "^3.0.0",
+    "source-map": "^0.5.7",
+    "source-map-js": "^1.2.1",
+    "streamsearch": "^1.1.0",
+    "string.prototype.includes": "^2.0.1",
+    "string.prototype.matchall": "^4.0.11",
+    "string.prototype.repeat": "^1.0.0",
+    "string.prototype.trim": "^1.2.9",
+    "string.prototype.trimend": "^1.0.8",
+    "string.prototype.trimstart": "^1.0.8",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^3.0.0",
+    "strip-json-comments": "^3.1.1",
+    "style-value-types": "^4.1.4",
+    "styled-jsx": "^5.1.6",
+    "stylis": "^4.0.10",
+    "supports-color": "^5.5.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tapable": "^2.2.1",
+    "text-table": "^0.2.0",
+    "tiny-invariant": "^1.1.0",
+    "tinycolor2": "^1.4.2",
+    "to-regex-range": "^5.0.1",
+    "toggle-selection": "^1.0.6",
+    "ts-api-utils": "^1.3.0",
+    "tsconfig-paths": "^3.15.0",
+    "tslib": "^1.14.1",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "typed-array-buffer": "^1.0.2",
+    "typed-array-byte-length": "^1.0.1",
+    "typed-array-byte-offset": "^1.0.2",
+    "typed-array-length": "^1.0.6",
+    "typescript": "^5.6.3",
+    "unbox-primitive": "^1.0.2",
+    "uri-js": "^4.4.1",
+    "vue-eslint-parser": "^9.4.3",
+    "warning": "^4.0.3",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "which-builtin-type": "^1.1.4",
+    "which-collection": "^1.0.2",
+    "which-typed-array": "^1.1.15",
+    "word-wrap": "^1.2.5",
+    "wrappy": "^1.0.2",
+    "yaml": "^1.10.2",
+    "yocto-queue": "^0.1.0"
   },
-  "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@next/eslint-plugin-next": "^15.0.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "17.0.15",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "^15.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "prettier": "^2.8.8",
-    "typescript": "^5.6.3"
-  }
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
