--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "LEEK",
   "main": "next.config.js",
   "dependencies": {
+    "@chakra-ui/react": "^3.0.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "acorn": "^8.13.0",
     "acorn-jsx": "^5.3.2",
     "ajv": "^6.12.6",
@@ -313,10 +316,13 @@
     "yaml": "^1.10.2",
     "yocto-queue": "^0.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1"
+  }
 }
