--- a/package.json
+++ b/package.json
@@ -80,14 +80,11 @@
     "es-to-primitive": "^1.2.1",
     "escalade": "^3.1.1",
     "escape-string-regexp": "^4.0.0",
-    "eslint": "^8.52.0",
     "eslint-config-next": "^15.0.1",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-module-utils": "^2.12.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.1",
-    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-scope": "^7.2.2",
@@ -234,7 +231,6 @@
     "possible-typed-array-names": "^1.0.0",
     "postcss": "^8.4.31",
     "prelude-ls": "^1.2.1",
-    "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2",
     "prettier-linter-helpers": "^1.0.0",
     "pretty-format": "^29.7.0",
@@ -324,6 +320,10 @@
   "devDependencies": {
     "@types/node": "^22.7.9",
     "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1"
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3"
   }
 }
