--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "next.config.js",
   "dependencies": {
     "@chakra-ui/react": "^3.0.0",
+    "framer-motion": "^11.11.9",
     "next": "^15.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
     "@types/node": "^16.0.0",
-    "typescript": "^4.4.4",
+    "@types/react": "^18.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-next": "^15.0.1",
+    "eslint-plugin-react": "^7.28.0",
     "jest": "^27.0.0",
-    "eslint-plugin-react": "^7.28.0"
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "dev": "next dev",
