--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "LEEK",
   "main": "next.config.js",
   "dependencies": {
-    "@chakra-ui/react": "^3.0.0",
-    "framer-motion": "^11.11.9",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "framer-motion": "^6.0.0",
     "next": "^15.0.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
