--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react": "^18.0.0",
     "eslint": "^9.13.0",
     "eslint-config-next": "^15.0.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.28.0",
     "jest": "^27.0.0",
+    "prettier": "^3.3.3",
     "typescript": "^4.4.4"
   },
   "scripts": {
