--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
-    "@types/node": "^16.0.0",
-    "@types/react": "^18.0.0",
+    "@types/node": "^16.18.115",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
     "eslint-config-next": "^15.0.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react": "^7.37.2",
     "jest": "^27.0.0",
     "prettier": "^3.3.3",
-    "typescript": "^4.4.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "dev": "next dev",
