--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "next", 
     "next/core-web-vitals", 
     "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
     "plugin:react/recommended",
     "prettier"
   ],
