--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9.13.0",
     "eslint-config-next": "^15.0.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "jest": "^27.0.0",
     "prettier": "^3.3.3",
