--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,20 +18,18 @@
     "paths": {
       "@/*": ["*"]
     },
-    "typeRoots": ["./node_modules/@types", "./types"]  // Adjust if you have custom types
+    "typeRoots": ["./node_modules/@types", "./types"] // Adjust if you have custom types
   },
   "include": [
-    "next-env.d.ts", 
-    "**/*.ts", 
-    "**/*.tsx", 
-    "components/**/*.ts", 
-    "config/**/*.ts", 
-    "hooks/**/*.ts", 
-    "pages/**/*.ts", 
-    "public/**/*.ts", 
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "components/**/*.ts",
+    "config/**/*.ts",
+    "hooks/**/*.ts",
+    "pages/**/*.ts",
+    "public/**/*.ts",
     "styles/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
